; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_wndproc.c_VID_AppActivate.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_wndproc.c_VID_AppActivate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i64 }

@g_wv = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [21 x i8] c"VID_AppActivate: %i\0A\00", align 1
@qtrue = common dso_local global i8* null, align 8
@qfalse = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64)* @VID_AppActivate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @VID_AppActivate(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  store i64 %5, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @g_wv, i32 0, i32 1), align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @Com_DPrintf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i64 %6)
  %8 = call i32 (...) @Key_ClearStates()
  %9 = load i64, i64* %3, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @g_wv, i32 0, i32 1), align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %11
  %15 = load i8*, i8** @qtrue, align 8
  store i8* %15, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @g_wv, i32 0, i32 0), align 8
  br label %18

16:                                               ; preds = %11, %2
  %17 = load i8*, i8** @qfalse, align 8
  store i8* %17, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @g_wv, i32 0, i32 0), align 8
  br label %18

18:                                               ; preds = %16, %14
  %19 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @g_wv, i32 0, i32 0), align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %24, label %21

21:                                               ; preds = %18
  %22 = load i8*, i8** @qfalse, align 8
  %23 = call i32 @IN_Activate(i8* %22)
  br label %27

24:                                               ; preds = %18
  %25 = load i8*, i8** @qtrue, align 8
  %26 = call i32 @IN_Activate(i8* %25)
  br label %27

27:                                               ; preds = %24, %21
  ret void
}

declare dso_local i32 @Com_DPrintf(i8*, i64) #1

declare dso_local i32 @Key_ClearStates(...) #1

declare dso_local i32 @IN_Activate(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
